Fix missing vote buttons on mobile

--- a/app/assets/stylesheets/RonRonnement.css.scss
+++ b/app/assets/stylesheets/RonRonnement.css.scss
@@ -1684,7 +1684,7 @@ img {
     #friends, #about_us { width: 48%; min-height: 300px; }
   }
 
-  .node footer.actions .button_to { display: none; }
+  .node footer.actions .action .button_to { display: none; }
   li.comment > h2 > a.title { pointer-events: none; }
   li.comment > ul { margin-left: 0.5em; }
   img.avatar { width: 50px; height: 50px; }
